--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "sketch_board",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "16.19.0",
     "npm": "8.19.3"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
